# elf_view

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
gui/: mainwindow.ui
includes/: elf.h  elffile.h  mainwindow.h
src/: elffile.cpp  elffile.cpp_old  mainwindow.cpp
